--- a/meta-aos-vm-node/recipes-kernel/linux/files/aos.cfg
+++ b/meta-aos-vm-node/recipes-kernel/linux/files/aos.cfg
@@ -15,6 +15,10 @@ CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=m
 
 CONFIG_VETH=m
 
+CONFIG_VXLAN=m
+
+CONFIG_NF_TABLES_BRIDGE=m
+CONFIG_NF_CONNTRACK_BRIDGE=m
 # Enable TPM
 
 CONFIG_TCG_TPM=m
