--- a/meta-aos-vm-common/recipes-kernel/linux/files/common_node.cfg
+++ b/meta-aos-vm-common/recipes-kernel/linux/files/common_node.cfg
@@ -19,6 +19,15 @@ CONFIG_VXLAN=m
 
 CONFIG_VETH=m
 
+CONFIG_IFB=m
+
+CONFIG_BRIDGE_VLAN_FILTERING=y
+CONFIG_VLAN_8021Q_GVRP=y
+CONFIG_VLAN_8021Q_MVRP=y
+CONFIG_NET_ACT_VLAN=m
+CONFIG_MACVLAN=m
+CONFIG_IPVLAN=m
+
 # Enable TPM
 
 CONFIG_TCG_TPM=m
