--- a/meta-aos-vm-common/conf/distro/aos-vm-dev.conf
+++ b/meta-aos-vm-common/conf/distro/aos-vm-dev.conf
@@ -16,6 +16,7 @@ INIT_MANAGER = "systemd"
 INITRAMFS_IMAGE = "aos-image-initramfs"
 INITRAMFS_IMAGE_BUNDLE = "0"
 INITRAMFS_FSTYPES = "cpio.gz"
+INITRAMFS_MAXSIZE = "191028"
 
 # Configure log dir to be stored in persistent storage
 VOLATILE_LOG_DIR = "no"
