--- a/meta-aos-vm-common/recipes-kernel/linux/files/common_node.cfg
+++ b/meta-aos-vm-common/recipes-kernel/linux/files/common_node.cfg
@@ -53,3 +53,11 @@ CONFIG_SQUASHFS_DECOMP_SINGLE=y
 CONFIG_SQUASHFS_XATTR=y
 CONFIG_SQUASHFS_ZLIB=y
 CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
+
+
+CONFIG_BRIDGE_VLAN_FILTERING=y
+CONFIG_VLAN_8021Q_GVRP=y
+CONFIG_VLAN_8021Q_MVRP=y
+CONFIG_NET_ACT_VLAN=m
+CONFIG_OPENVSWITCH_VXLAN=m
+CONFIG_BRIDGE_EBT_VLAN=m
